--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "express": "^4.17.1",
     "nodemon": "^2.0.7",
     "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "simple-peer": "^9.11.0",
     "socket.io": "^4.1.2",
+    "socket.io-client": "^4.1.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
